面接日程の承認画面の実装

--- a/app/views/interviews/_display.html.slim
+++ b/app/views/interviews/_display.html.slim
@@ -7,7 +7,7 @@ table.table.table-hover
       th
       th
     tbody
-      - @interviews.each do |interview|
+      - interviews.each do |interview|
         tr
           td= interview.start_datetime.to_s(:ja)
           td= interview.status_i18n
