--- a/app/views/interviews/index.html.slim
+++ b/app/views/interviews/index.html.slim
@@ -3,4 +3,4 @@ h1 #{@user.name}さんの面接一覧
 - if @user == current_user
   =render partial: 'display', locals: { interviews: @interviews }
 - else
-  =render partial: 'approval', locals: { interviews: @interviews }
+  =render partial: 'approval', locals: { interviews: @interviews, user: @user }
