--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,10 +7,10 @@ html
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   body
-    .app-title.navbar.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand e-Navigator
+    .app-title.navbar.navbar-expand-lg.navbar-light.bg-faded
+      .navbar-brand= link_to 'e-Navigator', users_path, class: 'nav-link'
 
-      ul.navbar-nav.ml-auto
+      ul.navbar-nav.mr-auto
         - if user_signed_in?
           li.nav-item= link_to 'プロフィール', edit_user_registration_path, class: 'nav-link'
           li.nav-item= link_to '自分の面接一覧', user_interviews_path(user_id: current_user.id), class: 'nav-link'
