承認依頼申請メールのフォームの作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,7 @@
     width: auto;
 }
 
-.bootstrap-sex-ajust {
+.ajust {
     width: auto;
 }
 
@@ -13,3 +13,12 @@
     display: inline-block;
     width: auto;
 }
+
+.inline-right {
+    float: right;
+}
+
+.inline-left {
+    float: left;
+}
+
