--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -11,7 +11,7 @@ h2
     = f.text_field :name, autofocus: true, class: 'form-control'
     = f.label :birth_date
     br
-    = f.date_select :birth_date, {start_year: 1989, end_year: 2001}, autofocus: true, class: 'form-control bootstrap-date-ajust'
+    = f.date_select :birth_date, {start_year: 1989, end_year: 2001}, autofocus: true, class: 'form-control ajust'
     br
     = f.label :sex
     br
