--- a/app/views/interviews/_display.html.slim
+++ b/app/views/interviews/_display.html.slim
@@ -25,7 +25,7 @@ table.table.table-hover
   = form_with url: apply_user_interviews_path(user), method: :post, local: true do |f|
     .form-inline
       .field
-        = f.collection_select :user_id, User.where.not(id: current_user.id), :id, :email, {prompt: false}, autofocus: true, class: 'form-control custom-select ajust'
+        = f.collection_select :approver_id, User.where.not(id: current_user.id), :id, :email, {prompt: false}, autofocus: true, class: 'form-control custom-select ajust'
       .action
         = f.submit "申請", class: 'btn btn-success'
 .inline-right
