面接一覧の表に枠線追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,16 +1,11 @@
 @import "bootstrap";
 
-.bootstrap-date-ajust {
+.inline-ajust {
     display: inline-block;
     width: auto;
 }
 
 .ajust {
-    width: auto;
-}
-
-#interview_start_time {
-    display: inline-block;
     width: auto;
 }
 
