--- a/app/views/interviews/_display.html.slim
+++ b/app/views/interviews/_display.html.slim
@@ -1,25 +1,25 @@
 .mb-3
-table.table.table-hover
+table.table.table-hover.table-bordered
   thead.thead-default
     tr
-      th= Interview.human_attribute_name(:start_datetime)
-      th= Interview.human_attribute_name(:status)
+      th.text-center= Interview.human_attribute_name(:start_datetime)
+      th.text-center= Interview.human_attribute_name(:status)
       th
       th
     tbody
       - interviews.each do |interview|
         tr
-          td= interview.start_datetime.to_s(:ja)
-          td= interview.status_i18n
+          td.text-center= interview.start_datetime.to_s(:ja)
+          td.text-center= interview.status_i18n
           - if interview.reservation?
-            td
+            td.text-center
                 = link_to '編集', edit_user_interview_path(id: interview.id), class: 'btn btn-secondary'
-            td
+            td.text-center
                 = link_to '削除', user_interview_path(id: interview.id), method: :delete, data: { confirm: "面接日程を削除します。よろしいですか？" }, class: 'btn btn-danger'
           - else
-            td
+            td.text-center
                 = link_to '編集', edit_user_interview_path(id: interview.id), class: 'btn btn-secondary disabled'
-            td
+            td.text-center
                 = link_to '削除', user_interview_path(id: interview.id), method: :delete, data: { confirm: "面接日程を削除します。よろしいですか？" }, class: 'btn btn-danger disabled'
 .inline-left
   = form_with url: apply_user_interviews_path(user), method: :post, local: true do |f|
