--- a/app/views/interviews/_form.html.slim
+++ b/app/views/interviews/_form.html.slim
@@ -6,7 +6,7 @@
 
 =form_with model: interview, url: [user, interview] , local: true do |f|
   .form-group
-    = f.label :start_datetime
+    strong = f.label :start_datetime
     br
-    = f.datetime_select :start_datetime, {}, class: 'form-control', id: 'interview_start_time'
+    = f.datetime_select :start_datetime, {}, class: 'form-control custom-select inline-ajust'
   = f.submit nil, class: 'btn btn-primary'
