--- a/app/views/apply_interview_mailer/interviewer.html.slim
+++ b/app/views/apply_interview_mailer/interviewer.html.slim
@@ -1,5 +1,5 @@
 p 
-  = @current_user.name
+  = @applicant.name
   | さんの面接希望日が決まりました。
 p 以下のURLから、面接日時の承認をよろしくお願いいたします。
-p = link_to user_interviews_url(@current_user), user_interviews_url(@current_user)
+p = link_to user_interviews_url(@applicant), user_interviews_url(@applicant)
